qt/gen_qtreewidget.h

typedef struct QDragMoveEvent QDragMoveEvent;
typedef struct QEvent QEvent;
typedef struct QItemSelection QItemSelection;
typedef struct QKeyEvent QKeyEvent;
typedef struct QModelIndex QModelIndex;
typedef struct QMouseEvent QMouseEvent;
typedef struct QPaintEvent QPaintEvent;
typedef struct QPainter QPainter;
typedef struct QPoint QPoint;
typedef struct QRect QRect;
typedef struct QRegion QRegion;
typedef struct QSize QSize;
typedef struct QStyleOptionViewItem QStyleOptionViewItem;
typedef struct QTimerEvent QTimerEvent;
typedef struct QVariant QVariant;
typedef struct QWidget QWidget;
bool QTreeWidget_override_virtual_keyboardSearch(void* self, intptr_t slot);
void QTreeWidget_virtualbase_keyboardSearch(void* self, struct miqt_string search);
bool QTreeWidget_override_virtual_visualRect(void* self, intptr_t slot);
QRect* QTreeWidget_virtualbase_visualRect(const void* self, QModelIndex* index);
bool QTreeWidget_override_virtual_scrollTo(void* self, intptr_t slot);
void QTreeWidget_virtualbase_scrollTo(void* self, QModelIndex* index, int hint);
bool QTreeWidget_override_virtual_indexAt(void* self, intptr_t slot);
QModelIndex* QTreeWidget_virtualbase_indexAt(const void* self, QPoint* p);
bool QTreeWidget_override_virtual_doItemsLayout(void* self, intptr_t slot);
void QTreeWidget_virtualbase_doItemsLayout(void* self);
bool QTreeWidget_override_virtual_reset(void* self, intptr_t slot);
void QTreeWidget_virtualbase_reset(void* self);
bool QTreeWidget_override_virtual_dataChanged(void* self, intptr_t slot);
void QTreeWidget_virtualbase_dataChanged(void* self, QModelIndex* topLeft, QModelIndex* bottomRight, struct miqt_array /* of int */  roles);
bool QTreeWidget_override_virtual_selectAll(void* self, intptr_t slot);
void QTreeWidget_virtualbase_selectAll(void* self);
bool QTreeWidget_override_virtual_verticalScrollbarValueChanged(void* self, intptr_t slot);
void QTreeWidget_virtualbase_verticalScrollbarValueChanged(void* self, int value);
bool QTreeWidget_override_virtual_scrollContentsBy(void* self, intptr_t slot);
void QTreeWidget_virtualbase_scrollContentsBy(void* self, int dx, int dy);
bool QTreeWidget_override_virtual_rowsInserted(void* self, intptr_t slot);
void QTreeWidget_virtualbase_rowsInserted(void* self, QModelIndex* parent, int start, int end);
bool QTreeWidget_override_virtual_rowsAboutToBeRemoved(void* self, intptr_t slot);
void QTreeWidget_virtualbase_rowsAboutToBeRemoved(void* self, QModelIndex* parent, int start, int end);
bool QTreeWidget_override_virtual_moveCursor(void* self, intptr_t slot);
QModelIndex* QTreeWidget_virtualbase_moveCursor(void* self, int cursorAction, int modifiers);
bool QTreeWidget_override_virtual_horizontalOffset(void* self, intptr_t slot);
int QTreeWidget_virtualbase_horizontalOffset(const void* self);
bool QTreeWidget_override_virtual_verticalOffset(void* self, intptr_t slot);
int QTreeWidget_virtualbase_verticalOffset(const void* self);
bool QTreeWidget_override_virtual_setSelection(void* self, intptr_t slot);
void QTreeWidget_virtualbase_setSelection(void* self, QRect* rect, int command);
bool QTreeWidget_override_virtual_visualRegionForSelection(void* self, intptr_t slot);
QRegion* QTreeWidget_virtualbase_visualRegionForSelection(const void* self, QItemSelection* selection);
bool QTreeWidget_override_virtual_selectedIndexes(void* self, intptr_t slot);
struct miqt_array /* of QModelIndex* */  QTreeWidget_virtualbase_selectedIndexes(const void* self);
bool QTreeWidget_override_virtual_timerEvent(void* self, intptr_t slot);
void QTreeWidget_virtualbase_timerEvent(void* self, QTimerEvent* event);
bool QTreeWidget_override_virtual_paintEvent(void* self, intptr_t slot);
void QTreeWidget_virtualbase_paintEvent(void* self, QPaintEvent* event);
bool QTreeWidget_override_virtual_drawRow(void* self, intptr_t slot);
void QTreeWidget_virtualbase_drawRow(const void* self, QPainter* painter, QStyleOptionViewItem* options, QModelIndex* index);
bool QTreeWidget_override_virtual_drawBranches(void* self, intptr_t slot);
void QTreeWidget_virtualbase_drawBranches(const void* self, QPainter* painter, QRect* rect, QModelIndex* index);
bool QTreeWidget_override_virtual_mousePressEvent(void* self, intptr_t slot);
void QTreeWidget_virtualbase_mousePressEvent(void* self, QMouseEvent* event);
bool QTreeWidget_override_virtual_mouseReleaseEvent(void* self, intptr_t slot);
void QTreeWidget_virtualbase_mouseReleaseEvent(void* self, QMouseEvent* event);
bool QTreeWidget_override_virtual_mouseDoubleClickEvent(void* self, intptr_t slot);
void QTreeWidget_virtualbase_mouseDoubleClickEvent(void* self, QMouseEvent* event);
bool QTreeWidget_override_virtual_mouseMoveEvent(void* self, intptr_t slot);
void QTreeWidget_virtualbase_mouseMoveEvent(void* self, QMouseEvent* event);
bool QTreeWidget_override_virtual_keyPressEvent(void* self, intptr_t slot);
void QTreeWidget_virtualbase_keyPressEvent(void* self, QKeyEvent* event);
bool QTreeWidget_override_virtual_dragMoveEvent(void* self, intptr_t slot);
void QTreeWidget_virtualbase_dragMoveEvent(void* self, QDragMoveEvent* event);
bool QTreeWidget_override_virtual_viewportEvent(void* self, intptr_t slot);
bool QTreeWidget_virtualbase_viewportEvent(void* self, QEvent* event);
bool QTreeWidget_override_virtual_updateGeometries(void* self, intptr_t slot);
void QTreeWidget_virtualbase_updateGeometries(void* self);
bool QTreeWidget_override_virtual_viewportSizeHint(void* self, intptr_t slot);
QSize* QTreeWidget_virtualbase_viewportSizeHint(const void* self);
bool QTreeWidget_override_virtual_sizeHintForColumn(void* self, intptr_t slot);
int QTreeWidget_virtualbase_sizeHintForColumn(const void* self, int column);
bool QTreeWidget_override_virtual_horizontalScrollbarAction(void* self, intptr_t slot);
void QTreeWidget_virtualbase_horizontalScrollbarAction(void* self, int action);
bool QTreeWidget_override_virtual_isIndexHidden(void* self, intptr_t slot);
bool QTreeWidget_virtualbase_isIndexHidden(const void* self, QModelIndex* index);
bool QTreeWidget_override_virtual_selectionChanged(void* self, intptr_t slot);
void QTreeWidget_virtualbase_selectionChanged(void* self, QItemSelection* selected, QItemSelection* deselected);
bool QTreeWidget_override_virtual_currentChanged(void* self, intptr_t slot);
void QTreeWidget_virtualbase_currentChanged(void* self, QModelIndex* current, QModelIndex* previous);
bool QTreeWidget_override_virtual_sizeHintForRow(void* self, intptr_t slot);
int QTreeWidget_virtualbase_sizeHintForRow(const void* self, int row);
bool QTreeWidget_override_virtual_inputMethodQuery(void* self, intptr_t slot);
QVariant* QTreeWidget_virtualbase_inputMethodQuery(const void* self, int query);
bool QTreeWidget_override_virtual_updateEditorData(void* self, intptr_t slot);
void QTreeWidget_virtualbase_updateEditorData(void* self);
bool QTreeWidget_override_virtual_updateEditorGeometries(void* self, intptr_t slot);
void QTreeWidget_virtualbase_updateEditorGeometries(void* self);
bool QTreeWidget_override_virtual_verticalScrollbarAction(void* self, intptr_t slot);
void QTreeWidget_virtualbase_verticalScrollbarAction(void* self, int action);
bool QTreeWidget_override_virtual_horizontalScrollbarValueChanged(void* self, intptr_t slot);
void QTreeWidget_virtualbase_horizontalScrollbarValueChanged(void* self, int value);
bool QTreeWidget_override_virtual_closeEditor(void* self, intptr_t slot);
void QTreeWidget_virtualbase_closeEditor(void* self, QWidget* editor, int hint);