qt/gen_qtreewidget.nim

proc fQTreeWidget_virtualbase_keyboardSearch(self: pointer, search: struct_miqt_string): void{.importc: "QTreeWidget_virtualbase_keyboardSearch".}
proc fcQTreeWidget_override_virtual_keyboardSearch(self: pointer, slot: int) {.importc: "QTreeWidget_override_virtual_keyboardSearch".}
proc fQTreeWidget_virtualbase_visualRect(self: pointer, index: pointer): pointer{.importc: "QTreeWidget_virtualbase_visualRect".}
proc fcQTreeWidget_override_virtual_visualRect(self: pointer, slot: int) {.importc: "QTreeWidget_override_virtual_visualRect".}
proc fQTreeWidget_virtualbase_scrollTo(self: pointer, index: pointer, hint: cint): void{.importc: "QTreeWidget_virtualbase_scrollTo".}
proc fcQTreeWidget_override_virtual_scrollTo(self: pointer, slot: int) {.importc: "QTreeWidget_override_virtual_scrollTo".}
proc fQTreeWidget_virtualbase_indexAt(self: pointer, p: pointer): pointer{.importc: "QTreeWidget_virtualbase_indexAt".}
proc fcQTreeWidget_override_virtual_indexAt(self: pointer, slot: int) {.importc: "QTreeWidget_override_virtual_indexAt".}
proc fQTreeWidget_virtualbase_doItemsLayout(self: pointer, ): void{.importc: "QTreeWidget_virtualbase_doItemsLayout".}
proc fcQTreeWidget_override_virtual_doItemsLayout(self: pointer, slot: int) {.importc: "QTreeWidget_override_virtual_doItemsLayout".}
proc fQTreeWidget_virtualbase_reset(self: pointer, ): void{.importc: "QTreeWidget_virtualbase_reset".}
proc fcQTreeWidget_override_virtual_reset(self: pointer, slot: int) {.importc: "QTreeWidget_override_virtual_reset".}
proc fQTreeWidget_virtualbase_dataChanged(self: pointer, topLeft: pointer, bottomRight: pointer, roles: struct_miqt_array): void{.importc: "QTreeWidget_virtualbase_dataChanged".}
proc fcQTreeWidget_override_virtual_dataChanged(self: pointer, slot: int) {.importc: "QTreeWidget_override_virtual_dataChanged".}
proc fQTreeWidget_virtualbase_selectAll(self: pointer, ): void{.importc: "QTreeWidget_virtualbase_selectAll".}
proc fcQTreeWidget_override_virtual_selectAll(self: pointer, slot: int) {.importc: "QTreeWidget_override_virtual_selectAll".}
proc fQTreeWidget_virtualbase_verticalScrollbarValueChanged(self: pointer, value: cint): void{.importc: "QTreeWidget_virtualbase_verticalScrollbarValueChanged".}
proc fcQTreeWidget_override_virtual_verticalScrollbarValueChanged(self: pointer, slot: int) {.importc: "QTreeWidget_override_virtual_verticalScrollbarValueChanged".}
proc fQTreeWidget_virtualbase_scrollContentsBy(self: pointer, dx: cint, dy: cint): void{.importc: "QTreeWidget_virtualbase_scrollContentsBy".}
proc fcQTreeWidget_override_virtual_scrollContentsBy(self: pointer, slot: int) {.importc: "QTreeWidget_override_virtual_scrollContentsBy".}
proc fQTreeWidget_virtualbase_rowsInserted(self: pointer, parent: pointer, start: cint, endVal: cint): void{.importc: "QTreeWidget_virtualbase_rowsInserted".}
proc fcQTreeWidget_override_virtual_rowsInserted(self: pointer, slot: int) {.importc: "QTreeWidget_override_virtual_rowsInserted".}
proc fQTreeWidget_virtualbase_rowsAboutToBeRemoved(self: pointer, parent: pointer, start: cint, endVal: cint): void{.importc: "QTreeWidget_virtualbase_rowsAboutToBeRemoved".}
proc fcQTreeWidget_override_virtual_rowsAboutToBeRemoved(self: pointer, slot: int) {.importc: "QTreeWidget_override_virtual_rowsAboutToBeRemoved".}
proc fQTreeWidget_virtualbase_moveCursor(self: pointer, cursorAction: cint, modifiers: cint): pointer{.importc: "QTreeWidget_virtualbase_moveCursor".}
proc fcQTreeWidget_override_virtual_moveCursor(self: pointer, slot: int) {.importc: "QTreeWidget_override_virtual_moveCursor".}
proc fQTreeWidget_virtualbase_horizontalOffset(self: pointer, ): cint{.importc: "QTreeWidget_virtualbase_horizontalOffset".}
proc fcQTreeWidget_override_virtual_horizontalOffset(self: pointer, slot: int) {.importc: "QTreeWidget_override_virtual_horizontalOffset".}
proc fQTreeWidget_virtualbase_verticalOffset(self: pointer, ): cint{.importc: "QTreeWidget_virtualbase_verticalOffset".}
proc fcQTreeWidget_override_virtual_verticalOffset(self: pointer, slot: int) {.importc: "QTreeWidget_override_virtual_verticalOffset".}
proc fQTreeWidget_virtualbase_setSelection(self: pointer, rect: pointer, command: cint): void{.importc: "QTreeWidget_virtualbase_setSelection".}
proc fcQTreeWidget_override_virtual_setSelection(self: pointer, slot: int) {.importc: "QTreeWidget_override_virtual_setSelection".}
proc fQTreeWidget_virtualbase_visualRegionForSelection(self: pointer, selection: pointer): pointer{.importc: "QTreeWidget_virtualbase_visualRegionForSelection".}
proc fcQTreeWidget_override_virtual_visualRegionForSelection(self: pointer, slot: int) {.importc: "QTreeWidget_override_virtual_visualRegionForSelection".}
proc fQTreeWidget_virtualbase_selectedIndexes(self: pointer, ): struct_miqt_array{.importc: "QTreeWidget_virtualbase_selectedIndexes".}
proc fcQTreeWidget_override_virtual_selectedIndexes(self: pointer, slot: int) {.importc: "QTreeWidget_override_virtual_selectedIndexes".}
proc fQTreeWidget_virtualbase_timerEvent(self: pointer, event: pointer): void{.importc: "QTreeWidget_virtualbase_timerEvent".}
proc fcQTreeWidget_override_virtual_timerEvent(self: pointer, slot: int) {.importc: "QTreeWidget_override_virtual_timerEvent".}
proc fQTreeWidget_virtualbase_paintEvent(self: pointer, event: pointer): void{.importc: "QTreeWidget_virtualbase_paintEvent".}
proc fcQTreeWidget_override_virtual_paintEvent(self: pointer, slot: int) {.importc: "QTreeWidget_override_virtual_paintEvent".}
proc fQTreeWidget_virtualbase_drawRow(self: pointer, painter: pointer, options: pointer, index: pointer): void{.importc: "QTreeWidget_virtualbase_drawRow".}
proc fcQTreeWidget_override_virtual_drawRow(self: pointer, slot: int) {.importc: "QTreeWidget_override_virtual_drawRow".}
proc fQTreeWidget_virtualbase_drawBranches(self: pointer, painter: pointer, rect: pointer, index: pointer): void{.importc: "QTreeWidget_virtualbase_drawBranches".}
proc fcQTreeWidget_override_virtual_drawBranches(self: pointer, slot: int) {.importc: "QTreeWidget_override_virtual_drawBranches".}
proc fQTreeWidget_virtualbase_mousePressEvent(self: pointer, event: pointer): void{.importc: "QTreeWidget_virtualbase_mousePressEvent".}
proc fcQTreeWidget_override_virtual_mousePressEvent(self: pointer, slot: int) {.importc: "QTreeWidget_override_virtual_mousePressEvent".}
proc fQTreeWidget_virtualbase_mouseReleaseEvent(self: pointer, event: pointer): void{.importc: "QTreeWidget_virtualbase_mouseReleaseEvent".}
proc fcQTreeWidget_override_virtual_mouseReleaseEvent(self: pointer, slot: int) {.importc: "QTreeWidget_override_virtual_mouseReleaseEvent".}
proc fQTreeWidget_virtualbase_mouseDoubleClickEvent(self: pointer, event: pointer): void{.importc: "QTreeWidget_virtualbase_mouseDoubleClickEvent".}
proc fcQTreeWidget_override_virtual_mouseDoubleClickEvent(self: pointer, slot: int) {.importc: "QTreeWidget_override_virtual_mouseDoubleClickEvent".}
proc fQTreeWidget_virtualbase_mouseMoveEvent(self: pointer, event: pointer): void{.importc: "QTreeWidget_virtualbase_mouseMoveEvent".}
proc fcQTreeWidget_override_virtual_mouseMoveEvent(self: pointer, slot: int) {.importc: "QTreeWidget_override_virtual_mouseMoveEvent".}
proc fQTreeWidget_virtualbase_keyPressEvent(self: pointer, event: pointer): void{.importc: "QTreeWidget_virtualbase_keyPressEvent".}
proc fcQTreeWidget_override_virtual_keyPressEvent(self: pointer, slot: int) {.importc: "QTreeWidget_override_virtual_keyPressEvent".}
proc fQTreeWidget_virtualbase_dragMoveEvent(self: pointer, event: pointer): void{.importc: "QTreeWidget_virtualbase_dragMoveEvent".}
proc fcQTreeWidget_override_virtual_dragMoveEvent(self: pointer, slot: int) {.importc: "QTreeWidget_override_virtual_dragMoveEvent".}
proc fQTreeWidget_virtualbase_viewportEvent(self: pointer, event: pointer): bool{.importc: "QTreeWidget_virtualbase_viewportEvent".}
proc fcQTreeWidget_override_virtual_viewportEvent(self: pointer, slot: int) {.importc: "QTreeWidget_override_virtual_viewportEvent".}
proc fQTreeWidget_virtualbase_updateGeometries(self: pointer, ): void{.importc: "QTreeWidget_virtualbase_updateGeometries".}
proc fcQTreeWidget_override_virtual_updateGeometries(self: pointer, slot: int) {.importc: "QTreeWidget_override_virtual_updateGeometries".}
proc fQTreeWidget_virtualbase_viewportSizeHint(self: pointer, ): pointer{.importc: "QTreeWidget_virtualbase_viewportSizeHint".}
proc fcQTreeWidget_override_virtual_viewportSizeHint(self: pointer, slot: int) {.importc: "QTreeWidget_override_virtual_viewportSizeHint".}
proc fQTreeWidget_virtualbase_sizeHintForColumn(self: pointer, column: cint): cint{.importc: "QTreeWidget_virtualbase_sizeHintForColumn".}
proc fcQTreeWidget_override_virtual_sizeHintForColumn(self: pointer, slot: int) {.importc: "QTreeWidget_override_virtual_sizeHintForColumn".}
proc fQTreeWidget_virtualbase_horizontalScrollbarAction(self: pointer, action: cint): void{.importc: "QTreeWidget_virtualbase_horizontalScrollbarAction".}
proc fcQTreeWidget_override_virtual_horizontalScrollbarAction(self: pointer, slot: int) {.importc: "QTreeWidget_override_virtual_horizontalScrollbarAction".}
proc fQTreeWidget_virtualbase_isIndexHidden(self: pointer, index: pointer): bool{.importc: "QTreeWidget_virtualbase_isIndexHidden".}
proc fcQTreeWidget_override_virtual_isIndexHidden(self: pointer, slot: int) {.importc: "QTreeWidget_override_virtual_isIndexHidden".}
proc fQTreeWidget_virtualbase_selectionChanged(self: pointer, selected: pointer, deselected: pointer): void{.importc: "QTreeWidget_virtualbase_selectionChanged".}
proc fcQTreeWidget_override_virtual_selectionChanged(self: pointer, slot: int) {.importc: "QTreeWidget_override_virtual_selectionChanged".}
proc fQTreeWidget_virtualbase_currentChanged(self: pointer, current: pointer, previous: pointer): void{.importc: "QTreeWidget_virtualbase_currentChanged".}
proc fcQTreeWidget_override_virtual_currentChanged(self: pointer, slot: int) {.importc: "QTreeWidget_override_virtual_currentChanged".}
proc fQTreeWidget_virtualbase_sizeHintForRow(self: pointer, row: cint): cint{.importc: "QTreeWidget_virtualbase_sizeHintForRow".}
proc fcQTreeWidget_override_virtual_sizeHintForRow(self: pointer, slot: int) {.importc: "QTreeWidget_override_virtual_sizeHintForRow".}
proc fQTreeWidget_virtualbase_inputMethodQuery(self: pointer, query: cint): pointer{.importc: "QTreeWidget_virtualbase_inputMethodQuery".}
proc fcQTreeWidget_override_virtual_inputMethodQuery(self: pointer, slot: int) {.importc: "QTreeWidget_override_virtual_inputMethodQuery".}
proc fQTreeWidget_virtualbase_updateEditorData(self: pointer, ): void{.importc: "QTreeWidget_virtualbase_updateEditorData".}
proc fcQTreeWidget_override_virtual_updateEditorData(self: pointer, slot: int) {.importc: "QTreeWidget_override_virtual_updateEditorData".}
proc fQTreeWidget_virtualbase_updateEditorGeometries(self: pointer, ): void{.importc: "QTreeWidget_virtualbase_updateEditorGeometries".}
proc fcQTreeWidget_override_virtual_updateEditorGeometries(self: pointer, slot: int) {.importc: "QTreeWidget_override_virtual_updateEditorGeometries".}
proc fQTreeWidget_virtualbase_verticalScrollbarAction(self: pointer, action: cint): void{.importc: "QTreeWidget_virtualbase_verticalScrollbarAction".}
proc fcQTreeWidget_override_virtual_verticalScrollbarAction(self: pointer, slot: int) {.importc: "QTreeWidget_override_virtual_verticalScrollbarAction".}
proc fQTreeWidget_virtualbase_horizontalScrollbarValueChanged(self: pointer, value: cint): void{.importc: "QTreeWidget_virtualbase_horizontalScrollbarValueChanged".}
proc fcQTreeWidget_override_virtual_horizontalScrollbarValueChanged(self: pointer, slot: int) {.importc: "QTreeWidget_override_virtual_horizontalScrollbarValueChanged".}
proc fQTreeWidget_virtualbase_closeEditor(self: pointer, editor: pointer, hint: cint): void{.importc: "QTreeWidget_virtualbase_closeEditor".}
proc fcQTreeWidget_override_virtual_closeEditor(self: pointer, slot: int) {.importc: "QTreeWidget_override_virtual_closeEditor".}
